--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
-    repositories {
-        gradlePluginPortal()
-    }
+//    repositories {
+//        gradlePluginPortal()
+//    }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin_version}"
         classpath "org.jetbrains.kotlin:kotlin-allopen:${kotlin_version}"
@@ -24,7 +24,7 @@ plugins {
     id "com.github.node-gradle.node"
     id "org.liquibase.gradle"
     id "org.sonarqube"
-    id "io.spring.nohttp"
+//    id "io.spring.nohttp"
     id "com.github.andygoossens.gradle-modernizer-plugin"
     //jhipster-needle-gradle-plugins - JHipster will add additional gradle plugins here
 }
@@ -179,14 +179,14 @@ gitProperties {
     keys = ["git.branch", "git.commit.id.abbrev", "git.commit.id.describe"]
 }
 
-checkstyle {
-    toolVersion "${checkstyleVersion}"
-    configFile file("checkstyle.xml")
-    checkstyleTest.enabled = false
-}
-nohttp {
-    source.include "build.gradle", "README.md"
-}
+//checkstyle {
+//    toolVersion "${checkstyleVersion}"
+//    configFile file("checkstyle.xml")
+//    checkstyleTest.enabled = false
+//}
+//nohttp {
+//    source.include "build.gradle", "README.md"
+//}
 
 configurations {
     providedRuntime
@@ -200,12 +200,12 @@ configurations {
     }
 }
 
-repositories {
-    // Local maven repository is required for libraries built locally with maven like development jhipster-bom.
-    // mavenLocal()
-    mavenCentral()
-    //jhipster-needle-gradle-repositories - JHipster will add additional repositories
-}
+//repositories {
+//    // Local maven repository is required for libraries built locally with maven like development jhipster-bom.
+//    // mavenLocal()
+//    mavenCentral()
+//    //jhipster-needle-gradle-repositories - JHipster will add additional repositories
+//}
 
 dependencies {
     // import JHipster dependencies BOM
