--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,10 @@
 
 pluginManagement {
-    repositories {
-        maven { url 'https://repo.spring.io/milestone' }
-        gradlePluginPortal()
-        //jhipster-needle-gradle-plugin-management-repositories - JHipster will add additional entries here
-    }
+//    repositories {
+//        maven { url 'https://repo.spring.io/milestone' }
+//        gradlePluginPortal()
+//        //jhipster-needle-gradle-plugin-management-repositories - JHipster will add additional entries here
+//    }
     plugins {
         id 'org.springframework.boot' version "${springBootVersion}"
         id 'com.google.cloud.tools.jib' version "${jibPluginVersion}"
@@ -12,7 +12,7 @@ pluginManagement {
         id 'com.github.node-gradle.node' version "${gradleNodePluginVersion}"
         id 'org.liquibase.gradle' version "${liquibasePluginVersion}"
         id 'org.sonarqube' version "${sonarqubePluginVersion}"
-        id "io.spring.nohttp" version "${noHttpCheckstyleVersion}"
+//        id "io.spring.nohttp" version "${noHttpCheckstyleVersion}"
         id 'com.github.andygoossens.gradle-modernizer-plugin' version "${modernizerPluginVersion}"
         //jhipster-needle-gradle-plugin-management-plugins - JHipster will add additional entries here
     }
