--- a/src/main/docker/elasticsearch.yml
+++ b/src/main/docker/elasticsearch.yml
@@ -2,7 +2,7 @@
 version: '3.8'
 services:
   wdanak-elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.15.2
+    image: elasticsearch:7.17.4
     # volumes:
     #   - ~/volumes/jhipster/WDanak/elasticsearch/:/usr/share/elasticsearch/data/
     # If you want to expose these ports outside your dev PC,
